# jax-template

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
jax_template/: main.py
jax_template/config/: default.yaml
jax_template/utils/: __init__.py  logger.py
