[project]
name = "jax-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "chex>=0.1.89",
    "colorama>=0.4.6",
    "flax>=0.10.4",
    "hydra-core>=1.3.2",
    "isort>=6.0.1",
    "jax>=0.5.1",
    "ruff>=0.9.8",
]
